--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>FYP_Pang</name>
+  <name>fyp_pang</name>
   <version>0.0.0</version>
   <description>The FYP_Pang package</description>
 
